--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ inflection==0.5.1
 packaging==25.0
 psycopg2-binary==2.9.11
 python-dateutil==2.9.0.post0
+python-decouple==3.8
 pytz==2025.2
 PyYAML==6.0.3
 six==1.17.0
